--- a/RS/templates/base.html.twig
+++ b/RS/templates/base.html.twig
@@ -4,8 +4,11 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+        <link href="~bulma-carousel/dist/css/bulma-carousel.min.css" rel="stylesheet">
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+        {% block link %}{% endblock %}
         {% block stylesheets %}{% endblock %}
+
     </head>
     <body>
     <nav class="navbar" style="background-color: #454545">
