--- a/RS/templates/user/profil.html.twig
+++ b/RS/templates/user/profil.html.twig
@@ -2,9 +2,70 @@
 {% block link %} <link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %}
 {% block body %} 
 
+  
+  <div>
+    <img style="max-height: 200px; min-width: 100%" src="{{ asset('/img/voyage.webp') }}">
+    <figure class="image is-96x96" style="position: absolute; left: 49%; top: 19%; ">
+      <img src="{{ asset('/img/yg.jpg') }}" class="is-rounded">
+    </figure>
+    <p style="position: absolute; left: 49%; top: 35%;"><strong>Yamina Gherbi</strong></p>
+  </div>
+  
+
+
 <div class="columns">
   <div class="column" >
     A propos de vous:
+
+    <nav class="level is-mobile">
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="heading">Publication</p>
+      <p class="title">3</p>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="heading">Abonnées</p>
+      <p class="title">123</p>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div>
+      <p class="heading">Abonnement</p>
+      <p class="title">10</p>
+    </div>
+  </div>
+  
+</nav>
+
+<div class="content">
+        <p>
+          <strong>Bio:</strong>
+          <br>
+         Hello je suis yamina 
+        </p>
+      </div>
+
+      <nav class="level is-mobile">
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Nombre de j'aime:</p>
+            <p class="title">3</p>
+          </div>
+        </div>
+        <div class="level-item has-text-centered">
+          <div>
+            <p class="heading">Nombre de publication:</p>
+            <p class="title">1</p>
+          </div>
+        </div>
+      </nav>
+
+
+<div class="control">
+  <center><button class="button is-warning">Ajouter</button></center>
+</div>
   </div>
 
   <div class="column">
@@ -33,7 +94,7 @@
     <nav class="level">
       <div class="level-left">
         <div class="level-item">
-          <a class="button is-info">Submit</a>
+          <a class="button is-warning">Submit</a>
         </div>
       </div>
     </nav>
@@ -77,6 +138,47 @@
 </div>
   </div>
   
+  <div class="box">
+  <article class="media">
+    <div class="media-left">
+      <figure class="image is-64x64">
+        <img src="{{ asset('/img/yg.jpg') }}" alt="" width="112px" height="150px" class="is-rounded">
+      </figure>
+    </div>
+    <div class="media-content">
+      <div class="content">
+        <p>
+          <strong>Yamina Gherbi</strong><small> 31m</small>
+          <br>
+         relou la greve
+        </p>
+      </div>
+      
+      <nav class="level is-mobile">
+        <div class="level-left">
+          <a class="level-item" aria-label="reply">
+            <span class="icon is-small">
+              <i class="fas fa-reply" aria-hidden="true"></i>
+            </span>
+          </a>
+          <a class="level-item" aria-label="retweet">
+            <span class="icon is-small">
+              <i class="fas fa-retweet" aria-hidden="true"></i>
+            </span>
+          </a>
+          <a class="level-item" aria-label="like">
+            <span class="icon is-small">
+              <i class="fas fa-heart" aria-hidden="true"></i>
+            </span>
+          </a>
+        </div>
+      </nav>
+    </div>
+    
+  </article>
+</div>
+  </div>
+  
 </article>
 
 </nav>
@@ -85,36 +187,13 @@
   <div class="column">
     Photos:
 
-    <section class="section">
-			<div class="container">
-				<!-- Start Carousel -->
-				<div id="carousel-demo" class="carousel">
-					<div class="item-1">
-						<img src="{{ asset('/img/yg.jpg') }}">
-					</div>
-					<div class="item-2">
-						<img src="{{ asset('/img/yg.jpg') }}">
-					</div>
-					<div class="item-3">
-						<!-- Slide Content -->
-					</div>
-				</div>
-				<!-- End Carousel -->
-			</div>
-            
-		</section>
-        <script src="~bulma-carousel/dist/js/bulma-carousel.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.4/dist/js/bulma-carousel.min.js"></script>
-		<script>
-		bulmaCarousel.attach('#carousel-demo', {
-			slidesToScroll: 1,
-			slidesToShow: 4
-		});
-        
-		</script>
+    <figure class="image is-3by4">
+   <img src="{{ asset('/img/ygvb.jpg') }}">
+</figure>
+    
   </div>
-</div>
- 
+
+  </div>
 
  
 
