--- a/RS/templates/base.html.twig
+++ b/RS/templates/base.html.twig
@@ -53,7 +53,7 @@
 								</a>
 							</p>
 							<p class="control">
-								<a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="https://bulma.io" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
+								<a class="bd-tw-button button" href="{{ path('searchFriends') }}">
 									<span class="icon">
 										<i class="fas fa-users"></i>
 									</span>
