--- a/RS/templates/user/picture.html.twig
+++ b/RS/templates/user/picture.html.twig
@@ -1,4 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block link %} <link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %}
-
-{% block body %} picture{% endblock %}
+   
+{% block body %}
+<div>
+ <img style="max-height: 200px; min-width: 20%" src="{{ asset('/img/yg.JPG') }}">
+ <style text-align
+ </div>
+{% endblock %}
