--- a/RS/templates/user/galery.html.twig
+++ b/RS/templates/user/galery.html.twig
@@ -1,4 +1,40 @@
 {% extends 'base.html.twig' %}
 {% block link %} <link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %}
 
-{% block body %} galery{% endblock %}
+{% block body %} <div class="columns">
+  <div class="column is-two-thirds">
+     <figure class="image is-128x128">
+          <img style="height: 140px; min-width: 20%" src="{{ asset('/img/alt.jpg') }}">
+</figure>
+  </div>
+  <div class="column is-two-thirds">
+  <figure class="image is-128x128">
+          <img style="height: 140px; min-width: 20%" src="{{ asset('/img/ghj.jpg') }}">
+</figure>
+  </div>
+  <div class="column is-two-thirds">
+    <figure class="image is-128x128">
+          <img style="height: 140px; min-width: 20%" src="{{ asset('/img/jhk.jpg') }}">
+</figure>
+  </div>
+  <div class="column is-two-thirds">
+    <figure class="image is-128x128">
+          <img style="height: 140px; min-width: 20%" src="{{ asset('/img/okn.jpg') }}">
+</figure>
+  </div>
+
+  <div class="column is-two-thirds">
+    <figure class="image is-128x128">
+          <img style="height: 140px; min-width: 20%" position:" absolute" src="{{ asset('/img/okn.jpg') }}">
+</figure>
+  </div>
+
+  <div class="column is-two-thirds">
+    <figure class="image is-128x128">
+          <img style="height: 140px; min-width: 20%" position:" absolute left: 49%; top: 34%"; src="{{ asset('/img/okn.jpg') }}">
+</figure>
+  </div>
+      
+
+  
+</div>{% endblock %}
