--- a/RS/templates/base.html.twig
+++ b/RS/templates/base.html.twig
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/scrollbar.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
-	<script src="js/caroussel_home.js" async></script>
+	<script src="js/display.js" async></script>
     {% block stylesheets %}{% endblock %}
 	</head>
 	<body>
