--- a/RS/templates/user/profil.html.twig
+++ b/RS/templates/user/profil.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block title %} Profil {% endblock %}
 {% block link %} <link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %}
 
 {% block body %} 
