--- a/RS/templates/user/galery.html.twig
+++ b/RS/templates/user/galery.html.twig
@@ -2,50 +2,67 @@
 {% block link %} <link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %}
 
 {% block body %} <div class="columns is-gapless is-multiline is-mobile">
-  <div class="column is-one-quarter" >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" src="{{ asset('/img/alt.jpg') }}">
-  </figure>
+  <div class="columns is-gapless is-multiline is-mobile">
+    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+      </div>
+    </div>
+    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+
+      </div>
+    </div>
+    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
+      <div class="card">
+        <div class="card-content" style="padding: 0; margin: 0;">
+        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+        </div>
+
+      </div>
+    </div>
   </div>
-  <div class="column is-one-quarter"  >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" src="{{ asset('/img/ghj.jpg') }}">
-  </figure>
-  </div>
-  <div class="column is-one-quarter" >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" src="{{ asset('/img/jhk.jpg') }}">
-  </figure>
-  </div>
-  <div class="column is-one-quarter" >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" src="{{ asset('/img/okn.jpg') }}">
-  </figure>
-  </div>
-  <div class="column is-one-quarter"  >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" src="{{ asset('/img/okn.jpg')}}">
-  </figure>
-  </div>
-  <div class="column is-one-quarter"  >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" ; src="{{ asset('/img/okn.jpg') }}">
-  </figure>
-  </div>
-  <div class="column is-one-quarter"  >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%"  src="{{ asset('/img/VB1.jpg') }}">
-  </figure>
-  </div>
-  <div class="column is-one-quarter" >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" src="{{ asset('/img/VB2.jpg') }}">
-  </figure>
-  </div>
-  <div class="column is-on-quarter" >
-    <figure class="image is-128x128">
-    <img style="height: 140px; min-width: 20%" src="{{ asset('/img/VB2.jpg') }}">
-  </figure>
-  </div>
+
+
 </div>
 {% endblock %}
