--- a/RS/templates/base.html.twig
+++ b/RS/templates/base.html.twig
@@ -1,119 +1,131 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>RS -
-			{% block title %}
-			{% endblock %}
-		</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    <link href="~bulma-carousel/dist/css/bulma-carousel.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+
+<head>
+	<meta charset="UTF-8">
+	<title>RS -
+		{% block title %}{% endblock %}
+	</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+	<link href="~bulma-carousel/dist/css/bulma-carousel.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/scrollbar.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
 	<script src="js/display.js" async></script>
-    {% block stylesheets %}{% endblock %}
-	</head>
-	<body>
-		<nav class="navbar is-fixed-top" style="background-color: #454545;">
-			<div class="container">
-				<div class="navbar-brand">
-					<a class="navbar-item" href="https://bulma.io">
-						<img src="{{ asset('/img/logo.png') }}" alt="" width="112px" height="150px">
-					</a>
-					<div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
-						<span></span>
-						<span></span>
-						<span></span>
+	{% block stylesheets %}{% endblock %}
+</head>
+
+<body>
+	<nav class="navbar is-fixed-top" style="background-color: #454545;">
+		<div class="container">
+			<div class="navbar-brand">
+				<a class="navbar-item" href="https://bulma.io">
+					<img src="{{ asset('/img/logo.png') }}" alt="" width="112px" height="150px">
+				</a>
+				<div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
+
+
+			<div class="navbar-end">
+				<div class="navbar-item">
+					<div class="field is-grouped">
+						<!-- <div class="field has-addons"> -->
+						<!-- <form action="" > -->
+						<p class="control is-expanded"> <input class="input" type="text"
+								placeholder="Rechercher quelqu'un">
+						</p>
+						<p class="control" style="padding-right: 40px;">
+							<button style="background-color: #FFD494; color: white; font-weight: bold;" class="button ">
+								Rechercher</button>
+						</p>
+						<!-- </form> -->
+						<!-- </div> -->
+
+						<p class="control">
+							<a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
+								data-social-target="https://bulma.io" target="_blank"
+								href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
+								<span class="icon">
+									<i class="fas fa-bell"></i>
+								</span>
+
+							</a>
+						</p>
+						<p class="control">
+							<a class="bd-tw-button button" href="{{ path('searchFriends') }}">
+								<span class="icon">
+									<i class="fas fa-users"></i>
+								</span>
+
+							</a>
+						</p>
+						<p class="control">
+							<a class="bd-tw-button button"
+								href="https://github.com/jgthms/bulma/releases/download/0.8.0/bulma-0.8.0.zip">
+								<span class="icon">
+									<i class="fas fa-envelope"></i>
+								</span>
+
+							</a>
+						</p>
+
+
 					</div>
 				</div>
-
-
-				<div class="navbar-end">
-					<div class="navbar-item">
-						<div class="field is-grouped">
-							<!-- <div class="field has-addons"> -->
-							<!-- <form action="" > -->
-								<p class="control is-expanded"> <input class="input" type="text" placeholder="Rechercher quelqu'un">
-							</p>
-							<p class="control" style="padding-right: 40px;">
-								<button style="background-color: #FFD494; color: white; font-weight: bold;" class="button ">
-									Rechercher</button>
-							</p>
-							<!-- </form> -->
-							<!-- </div> -->
-
-							<p class="control">
-								<a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet" data-social-target="https://bulma.io" target="_blank" href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
-									<span class="icon">
-										<i class="fas fa-bell"></i>
-									</span>
-
-								</a>
-							</p>
-							<p class="control">
-								<a class="bd-tw-button button" href="{{ path('searchFriends') }}">
-									<span class="icon">
-										<i class="fas fa-users"></i>
-									</span>
-
-								</a>
-							</p>
-							<p class="control">
-								<a class="bd-tw-button button" href="https://github.com/jgthms/bulma/releases/download/0.8.0/bulma-0.8.0.zip">
-									<span class="icon">
-										<i class="fas fa-envelope"></i>
-									</span>
-
-								</a>
-							</p>
-
-
-						</div>
-					</div>
-					<div class="navbar-item has-dropdown is-hoverable">
-						<a class="navbar-link is-white" href="https://bulma.io/documentation/overview/start/">
-							<figure class="image is-32x32">
-								<img class="is-rounded" src="http://static.debray-jerome.fr/49/images/slideshow/1.jpg" alt="1"/>
-							</figure>
+				<div class="navbar-item has-dropdown is-hoverable">
+					<a class="navbar-link is-white" href="https://bulma.io/documentation/overview/start/">
+						<figure class="image is-32x32">
+							<img class="is-rounded" src="http://static.debray-jerome.fr/49/images/slideshow/1.jpg"
+								alt="1" />
+						</figure>
+					</a>
+					<div class="navbar-dropdown is-boxed">
+						<a class="navbar-item" href="https://bulma.io/documentation/overview/start/">
+							Overview
 						</a>
-						<div class="navbar-dropdown is-boxed">
-							<a class="navbar-item" href="https://bulma.io/documentation/overview/start/">
-								Overview
-							</a>
-							<a class="navbar-item" href="https://bulma.io/documentation/modifiers/syntax/">
-								Modifiers
-							</a>
-							<a class="navbar-item" href="https://bulma.io/documentation/columns/basics/">
-								Columns
-							</a>
-							<a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
-								Layout
-							</a>
-							<a class="navbar-item" href="https://bulma.io/documentation/form/general/">
-								Form
-							</a>
-							<hr class="navbar-divider">
-							<a class="navbar-item" href="https://bulma.io/documentation/elements/box/">
-								Elements
-							</a>
-							<a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
-								Components
-							</a>
-						</div>
+						<a class="navbar-item" href="https://bulma.io/documentation/modifiers/syntax/">
+							Modifiers
+						</a>
+						<a class="navbar-item" href="https://bulma.io/documentation/columns/basics/">
+							Columns
+						</a>
+						<a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
+							Layout
+						</a>
+						<a class="navbar-item" href="https://bulma.io/documentation/form/general/">
+							Form
+						</a>
+						<hr class="navbar-divider">
+						<a class="navbar-item" href="https://bulma.io/documentation/elements/box/">
+							Elements
+						</a>
+						<a class="navbar-item is-active" href="https://bulma.io/documentation/components/breadcrumb/">
+							Components
+						</a>
 					</div>
 				</div>
 			</div>
-		</nav>
-		{% for message in app.flashes('succes') %}
-  <div class="alert alert-success">{{ message }}</div>
-{% endfor %}
+		</div>
+	</nav>
+	{% for message in app.flashes('success') %}
+	<article class="message is-success">
+		<div class="message-header">
+			<p style="text-align: center;">{{ message }}</p>
+		</div>
+	</article>
+	{% endfor %}
 
-{% for message in app.flashes('errors') %}
-  <div class="alert alert-danger">{{ message }}</div>
-{% endfor %}
-		{% block body %}{% endblock %}
-		{% block javascripts %}{% endblock %}
-	</body>
+	{% for message in app.flashes('errors') %}
+	<div class="alert alert-danger">{{ message }}</div>
+	{% endfor %}
+
+	{% block body %}{% endblock %}
+	{% block javascripts %}{% endblock %}
+</body>
+
 </html>
