--- a/RS/templates/base.html.twig
+++ b/RS/templates/base.html.twig
@@ -104,7 +104,7 @@
 						
 						
 						<a class="navbar-item" href="https://bulma.io/documentation/layout/container/">
-							Layout
+						  Reglage
 						</a>
 						<a class="navbar-item" href="https://bulma.io/documentation/form/general/">
 							Form
