--- a/RS/templates/user/profil.html.twig
+++ b/RS/templates/user/profil.html.twig
@@ -1,203 +1,160 @@
-{% extends 'base.html.twig' %}
-{% block title %} Profil {% endblock %}
-{% block link %} <link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %}
-
-{% block body %} 
-
-  
-  <div>
+{% extends 'base.html.twig' %} {% block title %} Profil {% endblock %} {% block link %}
+<link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %} {% block body %} {{dump(publi)}}
+<div>
     <img style="max-height: 200px; min-width: 100%" src="{{ asset('/img/voyage.webp') }}">
     <figure class="image is-96x96" style="position: absolute; left: 49%; top: 19%; ">
-      <img src="{{ asset('/img/yg.jpg') }}" class="is-rounded">
+        <img src="{{ asset('/img/yg.jpg') }}" class="is-rounded">
     </figure>
     <p style="position: absolute; left: 49%; top: 35%;"><strong>Yamina Gherbi</strong></p>
-  </div>
-  
+</div>
+
 
 
 <div class="columns">
-  <div class="column" >
-    A propos de vous:
+    <div class="column">
+        A propos de vous:
 
-    <nav class="level is-mobile">
-  <div class="level-item has-text-centered">
-    <div>
-      <p class="heading">Publication</p>
-      <p class="title">3</p>
-    </div>
-  </div>
-  <div class="level-item has-text-centered">
-    <div>
-      <p class="heading">Abonnées</p>
-      <p class="title">123</p>
-    </div>
-  </div>
-  <div class="level-item has-text-centered">
-    <div>
-      <p class="heading">Abonnement</p>
-      <p class="title">10</p>
-    </div>
-  </div>
-  
-</nav>
+        <nav class="level is-mobile">
+            <div class="level-item has-text-centered">
+                <div>
+                    <p class="heading">Publication</p>
+                    <p class="title">3</p>
+                </div>
+            </div>
+            <div class="level-item has-text-centered">
+                <div>
+                    <p class="heading">Abonnées</p>
+                    <p class="title">123</p>
+                </div>
+            </div>
+            <div class="level-item has-text-centered">
+                <div>
+                    <p class="heading">Abonnement</p>
+                    <p class="title">10</p>
+                </div>
+            </div>
 
-<div class="content">
-        <p>
-          <strong>Bio:</strong>
-          <br>
-         Hello je suis yamina 
-        </p>
-      </div>
+        </nav>
 
-      <nav class="level is-mobile">
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Nombre de j'aime:</p>
-            <p class="title">3</p>
-          </div>
+        <div class="content">
+            <p>
+                <strong>Bio:</strong>
+                <br> Hello je suis yamina
+            </p>
         </div>
-        <div class="level-item has-text-centered">
-          <div>
-            <p class="heading">Nombre de publication:</p>
-            <p class="title">1</p>
-          </div>
+
+        <nav class="level is-mobile">
+            <div class="level-item has-text-centered">
+                <div>
+                    <p class="heading">Nombre de j'aime:</p>
+                    <p class="title">3</p>
+                </div>
+            </div>
+            <div class="level-item has-text-centered">
+                <div>
+                    <p class="heading">Nombre de publication:</p>
+                    <p class="title">1</p>
+                </div>
+            </div>
+        </nav>
+
+
+        <div class="control">
+            <center><button class="button is-warning">Ajouter</button></center>
         </div>
-      </nav>
-
-
-<div class="control">
-  <center><button class="button is-warning">Ajouter</button></center>
-</div>
-  </div>
-
-  <div class="column">
-    Publications:
-
-    <div class="box">
-  <article class="media">
-    <div class="media-left">
-      <figure class="image is-64x64">
-        <img src="{{ asset('/img/yg.jpg') }}" alt="" width="112px" height="150px" class="is-rounded">
-      </figure>
     </div>
-    <div class="media-content">
-      <div class="content">
-        <p>
-          <strong>Yamina Gherbi</strong>
-          <br>
-        </p>
-      </div>
-  <div class="media-content">
-    <div class="field">
-      <p class="control">
-        <textarea style="min-height: 3em" class="textarea" placeholder="Exprimez-vous..."></textarea>
-      </p>
-    </div>
-    <nav class="level">
-      <div class="level-left">
-        <div class="level-item">
-          <a class="button is-warning">Submit</a>
-        </div>
-      </div>
-    </nav>
-    <div class="box">
-  <article class="media">
-    <div class="media-left">
-      <figure class="image is-64x64">
-        <img src="{{ asset('/img/yg.jpg') }}" alt="" width="112px" height="150px" class="is-rounded">
-      </figure>
-    </div>
-    <div class="media-content">
-      <div class="content">
-        <p>
-          <strong>Yamina Gherbi</strong><small> 31m</small>
-          <br>
-         il fait super beau aujourd'hui quel plaisir 
-        </p>
-      </div>
-      
-      <nav class="level is-mobile">
-        <div class="level-left">
-          <a class="level-item" aria-label="reply">
-            <span class="icon is-small">
+
+    <div class="column">
+        Publications:
+        <div class="box">
+            <article class="media">
+                <div class="media-left">
+                    <figure class="image is-64x64">
+                        <img src="{{ asset('/img/yg.jpg') }}" alt="" width="112px" height="150px" class="is-rounded">
+                    </figure>
+                </div>
+                <div class="media-content">
+                    <div class="content">
+                        <p>
+                            <strong>Yamina Gherbi</strong>
+                            <br>
+                        </p>
+                    </div>
+                    <div class="media-content">
+                        <div class="field">
+                            <p class="control">
+                                <textarea style="min-height: 3em" class="textarea" placeholder="Exprimez-vous..."></textarea>
+                            </p>
+                        </div>
+                        <nav class="level">
+                            <div class="level-left">
+                                <div class="level-item">
+                                    <a class="button is-warning">Submit</a>
+                                </div>
+                            </div>
+                        </nav>
+
+                        {% for value in publi %}
+                        <div class="box">
+                            <article class="media">
+                                <div class="media-left">
+                                    <figure class="image is-64x64">
+                                        <img src="{{ asset('/img/' ~ app.user.picture) }}" alt="" width="112px" height="150px" class="is-rounded">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <div class="content">
+                                        <p>
+                                            <strong>{{value.user.prenom}} {{value.user.nom}}</strong><small> {{value.date.date}}</small>
+                                            <br> {{value.text}}
+                                        </p>
+                                    </div>
+
+
+                                    <nav class="level is-mobile">
+                                        <div class="level-left">
+                                            <a class="level-item" aria-label="reply">
+                                                <span class="icon is-small">
               <i class="fas fa-reply" aria-hidden="true"></i>
             </span>
-          </a>
-          <a class="level-item" aria-label="retweet">
-            <span class="icon is-small">
+                                            </a>
+                                            <a class="level-item" aria-label="retweet">
+                                                <span class="icon is-small">
               <i class="fas fa-retweet" aria-hidden="true"></i>
             </span>
-          </a>
-          <a class="level-item" aria-label="like">
-            <span class="icon is-small">
+                                            </a>
+                                            <a class="level-item" aria-label="like">
+                                                <span class="icon is-small">
               <i class="fas fa-heart" aria-hidden="true"></i>
             </span>
-          </a>
+                                            </a>
+                                        </div>
+                                    </nav>
+                                </div>
+                            </article>
+                        </div>
+                        {% endfor %}
+                    </div>
+
+                </div>
+
+            </article>
+
+            </nav>
         </div>
-      </nav>
     </div>
-  </article>
-</div>
-  </div>
-  
-  <div class="box">
-  <article class="media">
-    <div class="media-left">
-      <figure class="image is-64x64">
-        <img src="{{ asset('/img/yg.jpg') }}" alt="" width="112px" height="150px" class="is-rounded">
-      </figure>
+    <div class="column">
+        Photos:
+
+        <figure class="image is-3by4">
+            <img src="{{ asset('/img/ygvb.jpg') }}">
+        </figure>
+
     </div>
-    <div class="media-content">
-      <div class="content">
-        <p>
-          <strong>Yamina Gherbi</strong><small> 31m</small>
-          <br>
-         relou la greve
-        </p>
-      </div>
-      
-      <nav class="level is-mobile">
-        <div class="level-left">
-          <a class="level-item" aria-label="reply">
-            <span class="icon is-small">
-              <i class="fas fa-reply" aria-hidden="true"></i>
-            </span>
-          </a>
-          <a class="level-item" aria-label="retweet">
-            <span class="icon is-small">
-              <i class="fas fa-retweet" aria-hidden="true"></i>
-            </span>
-          </a>
-          <a class="level-item" aria-label="like">
-            <span class="icon is-small">
-              <i class="fas fa-heart" aria-hidden="true"></i>
-            </span>
-          </a>
-        </div>
-      </nav>
-    </div>
-    
-  </article>
+
 </div>
-  </div>
-  
-</article>
 
-</nav>
-  </div>
-</div>
-  <div class="column">
-    Photos:
 
-    <figure class="image is-3by4">
-   <img src="{{ asset('/img/ygvb.jpg') }}">
-</figure>
-    
-  </div>
-
-  </div>
-
- 
 
 
 
