--- a/RS/templates/base.html.twig
+++ b/RS/templates/base.html.twig
@@ -8,8 +8,8 @@
 	</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
 	<link href="~bulma-carousel/dist/css/bulma-carousel.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/scrollbar.css">
+	<link rel="stylesheet" href="{{ asset('/css/style.css')}}">
+	<link rel="stylesheet" href="{{ asset('/css/scrollbar.css')}}">
 	<script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"></script>
 	<script src="js/display.js" async></script>
