--- a/RS/templates/user/galery.html.twig
+++ b/RS/templates/user/galery.html.twig
@@ -1,67 +1,21 @@
-{% extends 'base.html.twig' %}
-{% block link %} <link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %}
-
-{% block body %} <div class="columns is-gapless is-multiline is-mobile">
-  <div class="columns is-gapless is-multiline is-mobile">
-    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
-        </div>
-      </div>
-    </div>
-    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
-        </div>
-      </div>
-    </div>
-    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
-        </div>
-      </div>
-    </div>
-    <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
-        </div>
-      </div>
-    </div>
-    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
-        </div>
-      </div>
-    </div>
-    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
-        </div>
-      </div>
-    </div>
-    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
+{% extends 'base.html.twig' %} {% block link %}
+<link rel="stylesheet" href="{{ asset('/css/profil.css')}}">{% endblock %} {% block body %} {{dump(pic)}}
+<div class="columns is-gapless is-multiline is-mobile">
+    {% for key, value in pic %}
+    <div class="columns is-gapless is-multiline is-mobile">
+        <div class="column is-one-quarter" style="margin: 0.25%; width: 24%">
+            <div class="card">
+                <div class="card-content" style="padding: 0; margin: 0;">
+                    <img width="100%" height="100%" src="{{ asset('/imageUser/' ~ value.photo) }}">
+                </div>
+            </div>
         </div>
 
-      </div>
-    </div>
-    <div class="column is-one-quarter" style="margin: 1% 0.25%; width: 24%">
-      <div class="card">
-        <div class="card-content" style="padding: 0; margin: 0;">
-        <img width="100%" height="100%" src="{{ asset('/img/yg.jpg') }}">
-        </div>
 
-      </div>
     </div>
-  </div>
+    {% endfor %}
+</div>
+
 
 
 </div>
